infra/k8s/client-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: client-depl
  labels:
    app: client-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: client-pod
  template:
    metadata:
      labels:
        app: client-pod
    spec:
      containers:
        - name: client-container
          image: goobito/client
---
apiVersion: v1
kind: Service
metadata:
  name: client-cluster-ip-uri
spec:
  type: ClusterIP
  selector:
    app: client-pod
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
