infra/k8s/comments-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: comments-depl
  labels:
    app: comments-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: comments-pod
  template:
    metadata:
      labels:
        app: comments-pod
    spec:
      containers:
        - name: comments-container
          image: goobito/comments
---
apiVersion: v1
kind: Service
metadata:
  name: comments-cluster-ip-uri

spec:
  type: ClusterIP
  selector:
    app: comments-pod
  ports:
    - protocol: TCP
      port: 4002
      targetPort: 4002

---
apiVersion: v1
kind: Service
metadata:
  name: comments-nodeport-ext-test
spec:
  type: NodePort
  selector:
    app: comments-pod
  ports:
    - port: 4002
      targetPort: 4002
      nodePort: 30002
