infra/k8s/posts-depl.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: posts-depl
  labels:
    app: posts-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: posts-pod
  template:
    metadata:
      labels:
        app: posts-pod
    spec:
      containers:
        - name: posts-container
          image: goobito/posts
---
apiVersion: v1
kind: Service
metadata:
  name: posts-cluster-ip-uri
spec:
  type: ClusterIP
  selector:
    app: posts-pod
  ports:
    - protocol: TCP
      port: 4001
      targetPort: 4001
---
apiVersion: v1
kind: Service
metadata:
  name: posts-nodeport-ext-test
spec:
  type: NodePort
  selector:
    app: posts-pod
  ports:
    - port: 4001
      targetPort: 4001
      # optional, will be assigned a value by default.
      # in range (default: 30000-32767)
      # run kubectl get services to read the port under "PORT(S)"
      nodePort: 30001
