infra/k8s/ingress-routes.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: postapp-ingress-routes
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/use-regex: "true"
spec:
  rules:
    # configue this host to map to 127.0.0.1 in /etc/hosts
    # example entry:
    # 127.0.0.1 app.postapp.com
    - host: app.postapp.com
      http:
        paths:
          - path: /article
            pathType: Prefix
            backend:
              service:
                name: posts-cluster-ip-uri
                port:
                  number: 4001
          - path: /comments
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip-uri
                port:
                  number: 4002
          - path: /post/?(.*)/comment
            pathType: Prefix
            backend:
              service:
                name: comments-cluster-ip-uri
                port:
                  number: 4002
          - path: /articlecomments
            pathType: Prefix
            backend:
              service:
                name: query-cluster-ip-uri
                port:
                  number: 4003
